--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         </div>
       </nav>
       <!--Navbar ends here-->
+      <box type="text">
+        <div class="pqr" type="text">
+        <h1>WELCOME</h1>
+        <h3>KERALA-GOD'S OWN COUNTRY</h3>
+        </div>
+      </box>
       <!---carousel starts here-->
        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
