--- a/district.html
+++ b/district.html
@@ -35,133 +35,220 @@
         </div>
       </nav>
       <!--Navbar ends here-->
+      <box type="text">
+        <div class="pqr" type="text">
+        <br>
+        <h3>There are 14 districts in Kerala</h3>
+        </div>
+      </box>
       <!--cards starts here-->
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">THIRUVANANTHAPURAM</h5>
-              <img src="/images/thiruvananthapuram1.jpg">
+      <div class="container mt-5">
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/wayanad1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>WAYANAD</h2>
+                    <hr>
+                    <h4>Wayanad is a rural district in Kerala state, southwest India. In the east, the Wayanad Wildlife Sanctuary is a lush, forested region with areas of high altitude, home to animals including Asiatic elephants, tigers, leopards and egrets. In the Ambukuthi Hills to the south, Edakkal Caves contain ancient petroglyphs, some dating back to the Neolithic age. </h4>
+                    <a href="wayanad.html">
+                        <button class="btn btn-success">Know More</button>
+                    </a>
+                </div>
             </div>
-          </div>
         </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">PATHANAMTHITTA</h5>
-              <img src="/images/pathanamthitta.jpg">
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/kannur1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>KANNUR</h2>
+                    <hr>
+                    <h4>Kannur is a coastal city in the south Indian state of Kerala. It was once an ancient trading port. Enduring monuments such as 16th-century St. Angelo Fort, once occupied by European colonial forces, show the city’s significant role in the spice trade. Housed in a former palace, the Arakkal Museum highlights Kerala's one Muslim royal family. The palm-fringed sands of Payyambalam Beach run along Kannur’s western shore.</h4>
+                    <a href="kannur.html">
+                        <button class="btn btn-success">Know More</button>
+                    </a>
+                </div>
             </div>
-          </div>
         </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/kasargod1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>KASARAGOD</h2>
+                    <hr>
+                    <h4>Kasaragod is a municipal town and administrative headquarters of Kasaragod district in the state of Kerala, India. Established in 1966, Kasaragod was the first municipal town in the district. It is the northernmost district of Kerala and is also known as Saptha Bhasha Sangama Bhoomi.</h4>
+                    <a href="kasargod.html">
+                        <button class="btn btn-success">Know More</button>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/thiruvananthapuram2.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>THIRUVANANTHAPURAM</h2>
+                    <hr>
+                    <h4>Thiruvananthapuram (or Trivandrum) is the capital of the southern Indian state of Kerala. It's distinguished by its British colonial architecture and many art galleries. It’s also home to Kuthira Malika (or Puthen Malika) Palace, adorned with carved horses and displaying collections related to the Travancore royal family, whose regional capital was here from the 18th–20th centuries.</h4>
+                    <h5>Popular places: Sree Padmanabhaswamy Temple, Kovalam Beach, Shangumugham Beach</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/pathanamthitta1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>PATHANAMTHITTA</h2>
+                    <hr>
+                    <h4>Pathanamthitta, is a municipality situated in the Central Travancore region in the state of Kerala, India, spread over an area of 23.50 km². It is the administrative capital of Pathanamthitta district. The town has a population of 37,538.</h4>
+                    <h5>Popular places: Chuttipara, Malayalappuzha Bhagavathy Temple, Kottapara Hills Top View Point</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/alapuzha1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>ALAPUZHA</h2>
+                    <hr>
+                    <h4>Alappuzha (or Alleppey) is a city on the Laccadive Sea in the southern Indian state of Kerala. It's best known for houseboat cruises along the rustic Kerala backwaters, a network of tranquil canals and lagoons. Alappuzha Beach is the site of the 19th-century Alappuzha Lighthouse. The city's Mullakkal Temple features a traditional design. Punnamada Lake's snake boat races are a well-known annual event.</h4>
+                    <h5>Popular places: Marari Beach, Punnamada Lake, Revi Karunakaran Memorial MUESEUM</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/kollam1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>KOLLAM</h2>
+                    <hr>
+                    <h4>Kollam is a city in the state of Kerala, on India's Malabar Coast. It’s known as a trade hub and for its beaches, like lively Kollam and secluded Thirumullavaram. Sardar Vallabhbhai Patel Police Museum has artifacts tracing the history of the police force. Nearby, Ashtamudi Lake is a gateway to the Kerala backwaters, a network of waterways rich with vegetation. The striped 1902 Tangasseri Lighthouse has ocean views.</h4>
+                    <h5>Popular places: Ashtamudi Lake, St.Thomas Fort, Kollam Beach</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/idukki1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>IDUKKI</h2>
+                    <hr>
+                    <h4>Idukki district is a densely forested, mountainous region in the south Indian state of Kerala. In the north, Anamudi mountain towers over Eravikulam National Park, where the rare, blue Neelakurinji flower blooms every 12 years. Nearby, Munnar is a hill station known for its sprawling tea plantations and Tea Museum. Farther south is the vast, curved Idukki Dam and Periyar National Park, a tiger and elephant reserve.</h4>
+                    <h5>Popular places: Munnar, Idukki Dam, Hill View Park</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/kottayam1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>KOTTAYAM</h2>
+                    <hr>
+                    <h4>Kottayam is a city in the Indian state of Kerala. Flanked by the Western Ghats on the east and the Vembanad Lake and paddy fields of Kuttanad on the west. It is the district headquarters of Kottayam district, located in south-west Kerala.</h4>
+                    <h5>Popular places: Nalumanikattu, Ettumanur Shri Mahadevar Temple, Thazhathangadi Juma Masjid</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/eranakulam1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>ERANAKULAM</h2>
+                    <hr>
+                    <h4>Sprawling, residential Ernakulam is known for Marine Drive, a busy waterfront promenade where boats offer backwater cruises. The Kerala Folklore and Hill Palace museums explore local heritage through art and antiquities. Shops along Broadway and on MG Road sell fabrics, crafts, and spices, while modern Lulu Mall also has a cinema and an ice rink. Simple eateries serve Keralan specialties and South Indian seafood.</h4>
+                    <h5>Popular places: Marine Drive, Fort Kochi, Kerala Forklore Mueseum</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/thrissur1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>THRISSUR</h2>
+                    <hr>
+                    <h4>Thrissur is a city in the south Indian state of Kerala. It's known for sacred sites and colorful festivals. In the center is Vadakkumnathan Temple, dedicated to Lord Shiva and adorned with murals. The ornate, Indo-Gothic Our Lady of Dolours Basilica is nearby. To the north, Thiruvambady Temple is home to several elephants. Sakthan Thampuran Palace houses an archaeology museum with bronze statues and ancient coins.</h4>
+                    <h5>Popular places: athirapally Waterfalls, Sri Vadakkumnathan Temple, State Mueseum and Zoo</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/palakkad1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>PALAKKAD</h2>
+                    <hr>
+                    <h4>Palakkad, or Palghat, is a city in Kerala, a state in southwestern India. The 18th-century Palakkad Fort has sturdy battlements, a moat and a Hanuman temple on its grounds. North, on the Kalpathy River, the 15th-century Viswanatha Swamy Temple is the main venue of the famous Ratholsavam chariot festival. Northeast, near Malampuzha Dam, the town of Malampuzha has a rock garden created from recycled materials.</h4>
+                    <h5>Popular places: Palakkad Fort, Malampuzha Dam, Dhoni Waterfalls</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/malappuram1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>MALAPPURAM</h2>
+                    <hr>
+                    <h4>Malappuram is a city in the Indian state of Kerala, spread over an area of 58.20 km² including it's outgrowths. The first municipality in the district formed in 1970, Malappuram serves as the administrative headquarters of Malappuram district.</h4>
+                    <h5>Popular places: Kottakunnu, Kolayi Viewpoint, Kodachola Waterfall</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/images/kozhikode1.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h2>KOZHIKKODE</h2>
+                    <hr>
+                    <h4>Kozhikode is a coastal city in the south Indian state of Kerala. It was a significant spice trade center and is close to Kappad Beach, where Portuguese explorer Vasco da Gama landed in 1498. The central Kozhikode Beach, overlooked by an old lighthouse, is a popular spot for watching the sunset. Inland, tree-lined Mananchira Square, with its musical fountain, surrounds the massive Mananchira Tank, an artificial pond.</h4>
+                    <h5>Kozhikode beach, Kappad, Mittayitheruvu</h5>
+                </div>
+            </div>
+        </div>
+        <br>
+        
       </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">ALAPUZHA</h5>
-              <img src="/images/alapuzha.jpg">
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">KOLLAM</h5>
-              <img src="/images/kollam.jpg">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">IDUKKI</h5>
-              <img src="/images/idukki.jpg">
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">KOTTAYAM</h5>
-              <img src="/images/kottayam.jpg">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">ERANAKULAM</h5>
-              <img src="/images/eranakulam.jpg">
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">THRISSUR </h5>
-              <img src="/images/thrissur.jpg">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">PALAKKAD</h5>
-              <img src="/images/palakkad.jpg">
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">MALAPPURAM</h5>
-              <img src="/images/malappuram.jpg">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">KOZHIKKODE</h5>
-              <img src="/images/kozhikode.jpg">
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">WAYANAD</h5>
-              <img src="/images/wayanad.jpg">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">KANNUR</h5>
-              <img src="/images/kannur.jpg">
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">KASARAGOD</h5>
-              <img src="/images/kasargod.jpg">
-            </div>
-          </div>
-        </div>
-      </div>
+      <!--cards end here-->
+      
    <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> 
 </body>
